--- a/style.css
+++ b/style.css
@@ -440,21 +440,9 @@ nav .caret {
     margin-bottom: 20px;
 }
 
-.mg-sm {
-    margin-top: 10px;
-}
-
 .mg-lg {
     margin-top: 10px;
     margin-bottom: 40px;
-}
-
-.mg-quote {
-    margin-bottom: 0;
-    color: #575757!important;
-    font-weight: 500;
-    font-style: italic;
-    font-size: 20px;
 }
 
 .btn {
@@ -711,25 +699,14 @@ p {
     font-weight: 700;
 }
 
-.text-big {
-    font-size: 22px;
-    text-align: center;
-}
-
-.maj-dark {  
-    text-transform: uppercase;
-    color: #333333!important;
-}
-
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
 }
 
 h2 {
-    font-size: 17px;
+    font-size: 22px;
     line-height: 1.4em;
-    font-weight: 600;
 }
 
 h3 {
@@ -776,7 +753,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(70, 56, 31, 0.8);
+    background-color: rgba(165, 147, 99, 0.7);
     padding: 40px 40px 40px 40px;
 }
 
@@ -790,7 +767,7 @@ h4 {
 }
 
 .bgc-dark-slate-blue {
-    background-color: #3D3C6E;
+    background-color: #364577;
 }
 
 .bgc-atomic-tangerine {
@@ -828,8 +805,8 @@ h4 {
 }
 
 .icon-dark-slate-blue {
-    color: #3D3C6E!important;
-    border-color: #3D3C6E!important;
+    color: #364577!important;
+    border-color: #364577!important;
 }
 
 .bg-dots-bg {
