--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -20,6 +20,10 @@
     -moz-osx-font-smoothing: grayscale
 }
 
+.fa-xs {
+    font-size: .50em;
+}
+
 .fa-lg {
     font-size: 1.33333333em;
     line-height: .75em;
