--- a/style.css
+++ b/style.css
@@ -667,12 +667,9 @@ a {
 }
 
 .statement-bloc-text {
-    line-height: 26px;
-    font-style: italic;
-    font-size: 20px;
+    font-size: 22px;
     text-align: center;
-    font-weight: lighter;
-    max-width: 520px;
+    max-width: 450px;
     margin: auto auto auto auto;
 }
 
@@ -828,12 +825,17 @@ h4 {
 .new-quote {
     font-style: italic;
     font-weight:500;
-    margin-bottom: 0;
+    margin: 15px 40px 0;
     padding-bottom: 0;
     border: none;
 }
-.new-width {
-    max-width: 600px;
+.new-fa {
+    vertical-align: 60%;
+}
+.new-pSize {
+    font-size: 21px;
+}
+.new-mgPic {
     margin-right: auto;
     margin-left: auto;
 }
